--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 management.endpoints.web.exposure.include=*
 server.port=8080
+logging.level.org.springframework.web= DEBUG
+logging.level.org.com.example.printempsdemarrage = WARN
