--- a/panier-app/src/main/resources/application.properties
+++ b/panier-app/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 server.port=8082
-logging.level.org.springframework.web= DEBUG
-logging.level.org.com.example.printempsdemarrage = WARN
+dbStatus=inMemory
